@startuml

class RetrieveBrandsController {
    + __construct(Config config, Request request)
    + getPaginated(): JsonApiResourceCollection|JsonResponse
    + getBrandInfo(string|int brandId): BrandResource
}

class GetPagePaginatedBrandsAction {
    + handle(): array
}

class GetLimitOffsetPaginatedBrandsAction {
    + handle(): object
}

RetrieveBrandsController *-- GetPagePaginatedBrandsAction : contains
RetrieveBrandsController *-- GetLimitOffsetPaginatedBrandsAction : contains

@enduml
